--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.4",
     "lucide-react": "^0.563.0",
     "@google/genai": "^1.39.0",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "@supabase/supabase-js": "^2.39.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
