feat: Update dependencies and improve loading UX
Updates several dependencies to newer versions, including React, Recharts, and Supabase. Also enhances the initial loading experience by adding a "Iniciando BolsaMaster..." message with a pulsing animation to the root element when the application is not yet mounted. Includes improved error handling for Supabase connection issues, falling back gracefully to local storage.

--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "dependencies": {
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "lucide-react": "^0.563.0",
-    "@google/genai": "^1.39.0",
-    "recharts": "^3.7.0",
-    "@supabase/supabase-js": "^2.39.7"
+    "lucide-react": "0.475.0",
+    "recharts": "2.15.0",
+    "@supabase/supabase-js": "2.48.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
