--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.2.4",
     "lucide-react": "0.475.0",
     "recharts": "2.15.0",
-    "@supabase/supabase-js": "2.48.1"
+    "@supabase/supabase-js": "2.48.1",
+    "xlsx": "0.18.5",
+    "pdfjs-dist": "4.10.38"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
